# MoMEMta

./: CMakeLists.txt
MatrixElements/higgs4l/: CMakeLists.txt  original_CMakeLists.txt
MatrixElements/higgs4l/SubProcesses/P1_Sigma_sm__hgg_plugin_gg_epemmupmum/: P1_Sigma_sm__hgg_plugin_gg_epemmupmum.cc  P1_Sigma_sm__hgg_plugin_gg_epemmupmum.h
MatrixElements/higgs4l/include/: HelAmps_sm__hgg_plugin.h  Parameters_sm__hgg_plugin.h  SubProcess.h
MatrixElements/higgs4l/src/: HelAmps_sm__hgg_plugin.cc  Parameters_sm__hgg_plugin.cc
MatrixElements/ttbarElectronME/: CMakeLists.txt  original_CMakeLists.txt
MatrixElements/ttbarElectronME/SubProcesses/P1_Sigma_sm_gg_bepvebxmumvmx/: P1_Sigma_sm_gg_bepvebxmumvmx.cc  P1_Sigma_sm_gg_bepvebxmumvmx.h
MatrixElements/ttbarElectronME/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/ttbarElectronME/src/: HelAmps_sm.cc  Parameters_sm.cc
MatrixElements/ttbarMuMu/: CMakeLists.txt  original_CMakeLists.txt
MatrixElements/ttbarMuMu/SubProcesses/P1_Sigma_sm_gg_mupvmbmumvmxbx/: P1_Sigma_sm_gg_mupvmbmumvmxbx.cc  P1_Sigma_sm_gg_mupvmbmumvmxbx.h
MatrixElements/ttbarMuMu/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/ttbarMuMu/src/: HelAmps_sm.cc  Parameters_sm.cc
include/momemta/: PluginFactory.h
